samples/_failures_safe/1761192684_e376ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ab906a5.c: In function ‘main’:
./samples/SAFE/__tmp_8ab906a5.c:155:13: error: expected declaration or statement at end of input
  155 |             printf("Invalid edge parameters\n");
      |             ^~~~~~
./samples/SAFE/__tmp_8ab906a5.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ab906a5.c:155:13: error: expected declaration or statement at end of input
